--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
       />
       <button type="submit">Search</button>
     </form>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
+    <script src="index.js" type="module"></script>
   </body>
 </html>
