--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <div class="gallery">
       
     </div>
+    <button type="button" class="load-more">Load more</button>
     <script src="index.js" type="module"></script>
   </body>
 </html>
